cluster-system/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: cluster-system
  annotations:
    cert-manager.io/cluster-issuer: local-ca
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: default-https
      hostname: "k8sdash"
      port: 8443
      protocol: HTTPS
      tls:
       mode: Terminate
       certificateRefs:
         - name: k8sdash-local-tls
           kind: Secret
      allowedRoutes:
        namespaces:
          from: All
