cluster-system/gateway-api/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8sdash-route
spec:
  parentRefs:
    - name: gateway
      sectionName: default-https
  hostnames:
    - "k8sdash"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/login
        - path:
            type: PathPrefix
            value: /api/v1/csrftoken/login
        - path:
            type: PathPrefix
            value: /api/v1/me
      backendRefs:
        - name: k8s-dashboard-kubernetes-dashboard-auth
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: k8s-dashboard-kubernetes-dashboard-api
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: k8s-dashboard-kubernetes-dashboard-web
          port: 8000
